--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -4,7 +4,6 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 }
 
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -13,7 +12,7 @@
 
 html,
 body {
-  max-width: 100vw;
+  width: 100%;
+  height: 100%;
   overflow-x: hidden;
 }
-
