--- a/front/src/app/page.module.css
+++ b/front/src/app/page.module.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  height: 100%;
+  background-color: #9fc0c4;
 }
