--- a/front/src/app/module/login.module.css
+++ b/front/src/app/module/login.module.css
@@ -25,12 +25,14 @@
   height: 100%;
   justify-content: center;
 }
-
+.input {
+  width: 80%;
+}
 .formButtonGroup {
   display: flex;
   flex-direction: row;
   gap: 10%;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
